[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast_bioservices"
dynamic = ["version"]
# version = "0.1.1"
description = "A fast way to access and convert biological information"
authors = [{ name = "Josh Loecker", email = "joshloecker@gmail.com" }]
readme = "README.md"
requires-python = ">3.8,<4"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["appdirs~=1.4", "pandas>=1.5.8,<3", "rich~=13.7"]

[project.urls]
Documentation = "https://github.com/JoshLoecker/fast_bioservices"
Issues = "https://github.com/JoshLoecker/fast_bioservices/issues"
Source = "https://github.com/JoshLoecker/fast_bioservices"

[tool.hatch.version]
path = "fast_bioservices/__about__.py"


[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
dependencies = ["pytest~=8.2", "pytest-xdist~=3.6", "yappi~=1.6"]

[tool.ruff]
line-length = 120
