[project]
name    = "fast_bioservices"
dynamic = ["description", "version"]
# description     = "A fast way to access and convert biological information"
authors         = [{ name = "Josh Loecker", email = "joshloecker@gmail.com" }]
dependencies    = ["appdirs>=1.4.4", "pandas>=2.2.2", "rich>=13.7"]
requires-python = ">=3.9"
readme          = "README.md"
license         = { text = "MIT" }

[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path   = "src/fast_bioservices/__init__.py"

[tool.pdm.description]
source = "file"
path   = "src/fast_bioservices/__init__.py"

[tool.pdm.dev-dependencies]
test = ["pytest>=8.2"]
